Change IDs to classes to reduce layout issues and edit hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,8 @@ body {
     letter-spacing: 2px;
     color: #FBF1EB;
     background-color: #48494D;
+    max-width: 100%;
+
 }
 
 .breathing-space {
@@ -44,7 +46,7 @@ h3 {
     
 }
 
-#logo {
+.logo {
     line-height: 75px;
     float: left;
     text-decoration: none;
@@ -52,14 +54,14 @@ h3 {
     z-index: 3;
 }
 
-#logo img {
+.logo img {
     padding-top: 10px;
     padding-left: 30px;
 }
 
 /* navigation links */
 
-#menu {
+.menu {
     font-size: 110%;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -67,19 +69,19 @@ h3 {
     z-index: 2;
 }
 
-#menu li {
+.menu li {
     list-style-type: none;
     margin-right: 30px;
     float: right;  
 }
 
-#menu a {
+.menu a {
     text-decoration: none;
     color: #DBC8BD;
     font-weight: 500;
 }
 
-#menu a:hover {
+.menu a:hover {
     border-bottom: 1px solid #DBC8BD;
 }
 
@@ -94,37 +96,41 @@ h3 {
 
 /* hero image and cover text */
 
-#cover-text, #cover-text h2 {
+.cover-text, #cover-text h2 {
     color: #FBF1EB
 }
 
-#hero-image {
-    height: 520px;
-    width: 100vw;
-    max-width: 100vw;
-    max-height: 100%;
-    background: url('../images/grapes-header.png') no-repeat top center;
-    object-fit: cover;
-    padding-bottom: 30px;
-    margin-bottom: 60px;
-    position: relative;
-    top: 200px;
-    z-index: 1;
+.hero-image {
+    margin-bottom: 1vw;
 }
 
-#cover-text {
+.hero-image-crop {
+    height: 55vw;
+    width: 100vw;
+    max-width: 100%;
+    max-height: 100%;
+    background: url('../images/grapes-header.png') no-repeat top;
+    object-fit: cover;
+    margin-bottom: -20vw;
+    margin-left: 0;
+    position: relative;    
+    overflow: hidden;
+
+}
+
+.cover-text {
     font-size: 130%;
-    width: 300px;
-    height: 150px;
+    width: 20vw;
+    height: auto;
     border-radius: 10%;
     position: absolute;
-    padding-top: 30px;
-    padding-left: 20px;
+    padding: 2vw;
     float: right;
-    bottom: 200px;
-    right: 30px;
+    bottom: 5vw;
+    right: 3vw;
     background-color: rgba(19, 17, 10, 0.7);
     text-align: left;
+    z-index: 2;
     letter-spacing: 0em;
 }
 
@@ -134,11 +140,11 @@ h3 {
 
 /* About us */
 
-#about-us {
+.about-us {
     width: 60vw;
     height: fit-content;
     text-align: justify;
-    padding: 40px 60px;
+    padding: 3vw 5vw;
     margin: auto;
     border: 1px solid #DBC8BD;
     position: relative;
@@ -211,23 +217,23 @@ footer > p {
 
 /* products heading */
 
-#products-heading {
+.products-heading {
     position: relative;
-    top: 10%;
-    max-height: 10%;
+    top: 10;
+    height: 5vw;
     width: auto;
-    margin: 7%;
+    margin-top: 7%;
 }
 
 /* products pictures and hover effect*/
 
-#products {
+.products {
     display: inline;
     margin: 5%;
     
 }
 
-#products img {
+.products img {
     height: auto;
     width: 20%;
     padding: 5px;
@@ -248,7 +254,7 @@ footer > p {
 
 /* contact details */
 
-#contact {
+.contact {
     padding: 10%;
     font-size: 110%;
     width: 40vw;
@@ -257,7 +263,7 @@ footer > p {
     left: 30px;
 }
 
-#contact p {
+.contact p {
     font-style: italic;
     color: #DBC8BD;
 }
@@ -285,11 +291,11 @@ footer > p {
 
 /* contact form */
 
-#form-container {
+.form-container {
     float: right;
 }
 
-#form-container p {
+.form-container p {
     font-style: italic;
     color: #DBC8BD;
 }
